# project3_Shevchenko_Sergey-platform-for-tracking-and-simulating-currency-trading

./: .gitignore  Makefile  README.MD  config.json  main.py  pyproject.toml  run.py
data/: portfolios.json  rates.json  session.json  users.json
valutatrade_hub/: __init__.py  config.json  decorators.py  logging_config.py  main.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  session.py  usecases.py  utils.py
valutatrade_hub/infra/: database.py  settings.py  storage.py
valutatrade_hub/parser_service/: api_clients.py  config.py  storage.py  updater.py
valutatrade_hub/services/: rates_updater.py
