[tool.poetry]
name = "finalproject_shevchenko"
version = "0.1.0"
description = "ValutaTrade Hub — учебная CLI-платформа для симуляции торговли валютами"
authors = ["Шевченко Сергей <revaginiti@gmail.com>"]
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
